Event listeners added

--- a/index.html
+++ b/index.html
@@ -18,8 +18,18 @@
             <div class="banner__title">Martin's Aquarium</div>
         </div>
 
-        <div class="underTheBanner">
+        <section class="customization">
+            <select class="typeChoice">
+                <option value="all">Show All Fish</option>
+                <option value="holy">Holy Fish</option>
+                <option value="soldier">Soldier Fish</option>
+                <option value="plebs">Commoners</option>
+            </select>
 
+            <button class="toggleLocations">Toggle Locations</button>
+        </section>
+
+        <div class="underTheBanner">
             <div class="underTheBanner__left">
                 <h1 class="header header--quotes">Quotes</h1>
                 <article class="quoteList">
